--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<header>
 		<div class="container">
-			<h2 class="logo">NETFLIX</h2>
+			<h2 class="logo">CLONEFLIX</h2>
 			<nav>
 				<a href="#">Início</a>
 				<a href="#">Séries</a>
@@ -53,6 +53,10 @@
 		</div>
 	</main>
 	
+	<div class="sub-titulo">
+		Melhores sugestões para você
+	</div>
+	
 	<div class="carrossel-filmes">
 		<div class="owl-carousel owl-theme">
 			<div class="item"> <img class="box-filme" src="img/01.jpg" alt="Cobra Kai"> </div>
@@ -65,6 +69,25 @@
 			<div class="item"> <img class="box-filme" src="img/08.jpg" alt="Sobrenatural"> </div>
 			<div class="item"> <img class="box-filme" src="img/09.jpg" alt="The Crown"> </div>
 			<div class="item"> <img class="box-filme" src="img/10.jpg" alt="A Caminho da Lua"> </div>
+		</div>
+	</div>
+	
+	<div class="sub-titulo">
+		Para toda a família
+	</div>
+	
+	<div class="carrossel-filmes">
+		<div class="owl-carousel owl-theme">
+			<div class="item"> <img class="box-filme" src="img/11.jpg" alt="The Umbrella Academy"> </div>
+			<div class="item"> <img class="box-filme" src="img/12.jpg" alt="The Crown"> </div>
+			<div class="item"> <img class="box-filme" src="img/13.jpg" alt="X-Men"> </div>
+			<div class="item"> <img class="box-filme" src="img/14.jpg" alt="Coringa"> </div>
+			<div class="item"> <img class="box-filme" src="img/15.jpg" alt="O Senhor dos Anéis"> </div>
+			<div class="item"> <img class="box-filme" src="img/16.jpg" alt="Frozen II"> </div>
+			<div class="item"> <img class="box-filme" src="img/17.jpg" alt="Os Simpsons"> </div>
+			<div class="item"> <img class="box-filme" src="img/18.jpg" alt="GOT"> </div>
+			<div class="item"> <img class="box-filme" src="img/19.jpg" alt="The Boys"> </div>
+			<div class="item"> <img class="box-filme" src="img/20.jpg" alt="O Gambito da Rainha"> </div>
 		</div>
 	</div>
 	
